# E-Sports-Control-Manager

./: .gitignore  CMakeLists.txt  README.md  linkedlist.h  main.cpp  mainwindow.cpp  mainwindow.h  match.h  node.h  player.h  queuemanager.cpp  queuemanager.h  styles.qss  tournamentsystem.cpp  tournamentsystem.h
release/: exe.rar
web/: app.js  index.html  styles.css
